--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AdminPro</title>
+    <title>Hospital App</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -10,7 +10,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/images/favicon.png"
+      href="./assets/images/hospital-dark.png"
     />
 
     <!-- Bootstrap Core CSS -->
@@ -20,12 +20,14 @@
     />
     <!-- Custom CSS -->
     <link href="./assets/css/style.css" rel="stylesheet" />
-    <!-- You can change the theme colors from here -->
+
+
+    <!-- AQUI SE CAMBIA EL TEMA -->
     <link
-      href="./assets/css/colors/default-dark.css"
       id="theme"
       rel="stylesheet"
     />
+
   </head>
   <body class="fix-header card-no-border fix-sidebar">
     <!-- ROOT DE LA APP -->
@@ -35,7 +37,7 @@
     <div class="preloader">
       <div class="loader">
         <div class="loader__figure"></div>
-        <p class="loader__label">Admin Pro</p>
+        <p class="loader__label">Hospital App</p>
       </div>
     </div>
 
@@ -56,10 +58,9 @@
     <script src="./assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="./assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
-    <script src="./assets/js/custom.min.js"></script>
-    <!-- ============================================================== -->
-    <!-- Style switcher -->
-    <!-- ============================================================== -->
-    <script src="./assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+    <script src="./assets/js/custom.js"></script>
+    <!-- COLOR EFFECTS -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
   </body>
 </html>
