--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <title>Hospital App</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="icon.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/images/hospital-dark.png"
+      href="./assets/images/icon.png"
     />
 
     <!-- Bootstrap Core CSS -->
