--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       href="./assets/images/icon.png"
     />
 
+
     <!-- Bootstrap Core CSS -->
     <link
       href="../assets/plugins/bootstrap/css/bootstrap.min.css"
@@ -61,6 +62,10 @@
     <script src="./assets/js/custom.js"></script>
     <!-- COLOR EFFECTS -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+
+    <!-- Google Inicio de sesion -->
+    <script src="https://apis.google.com/js/platform.js"></script>
 
   </body>
 </html>
